--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,10 +1,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "sourceMap": false,
+    "sourceMap": true,
     "declaration": false,
     "declarationMap": false,
     "allowJs": true
   },
-  "exclude": ["test/**/*"]
+  "exclude": ["lib/vue/*/script.ts", "test/**/*"]
 }
